2006-01-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/getopt.h (getopt_long_only): Declare.

2006-01-09  Eric Blake  <ebb9@byu.net>

	* cygwin.din: Export getsubopt.
	* include/cygwin/version.h: Bump API minor version.

2006-01-08  Christopher Faylor  <cgf@timesys.com>

	* fhandler_tty.cc (fhandler_tty_slave::dup): Don't assign a controlling
	terminal to a process when duped.  Linux doesn't do this, so we won't
	either.

2006-01-08  Christopher Faylor  <cgf@timesys.com>

	* environ.cc (spenvs[]): windir -> WINDIR.

2006-01-07  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (fhandler_console::need_invisible): Remove
	duplicate test.

2006-01-07  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (set_console_state_for_spawn): Eliminate argument from
	declaration.
	* fhandler.cc (set_console_state_for_spawn): Eliminate argument from
	definition.  Always check for invisible console.
	(fhandler_console::need_invisible): Don't do anything if the windows
	station is already not visible.
	* spawn.cc (spawn_guts): Accommodate change of argument to
	set_console_state_for_spawn.

2006-01-05  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (no_signals_available): Use existence of signal thread
	handle to figure out if we can actually send signals rather than
	relying on my_sendsig.
	(hwait_sig): Make static.
	(sigproc_init): Don't set my_sendsig to anything special.  Use new
	global static hwait_sig.
	(wait_sig): Set hwait_sig to NULL when we are exiting.

2006-01-05  Christopher Faylor  <cgf@timesys.com>

	* include/getopt.h: Accommodate recent unfortunate newlib changes.

2006-01-05  Christopher Faylor  <cgf@timesys.com>

	* cygtls.cc (_cygtls::remove): Don't output debugging info if this
	isn't a cygwin thread.
	* sigproc.cc (sigproc_init): Move clearing of sync_startup here to
	lessen the likelihood of trying to deal with non-cygwin threads in
	dll_entry.

	* fhandler_console: Fix set_console_state_for_spawn comment.
