@@ -1,3 +1,12 @@
+2006-01-09  Christopher Faylor  <cgf@timesys.com>
+
+	* spawn.cc (spawn_guts): Reorganize slightly so that 16 bit check is
+	done prior to check for command.com/cmd.com.  Don't bother setting
+	CREATE_SUSPENDED flag for a MS-DOS process since it doesn't work
+	anyway.  Avoid calling remember() when the child process has already
+	exited.
+	(av::fixup): Explicitly set cygexec flag to falseon a 16 bit process.
+
 2006-01-09  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/getopt.h (getopt_long_only): Declare.
